--- a/indent.1
+++ b/indent.1
@@ -17,7 +17,7 @@
 .SH NAME
 indent - indent.info
 .PP
-.\" This is indent.info, produced by makeinfo version 6.3 from
+.\" This is indent.info, produced by makeinfo version 6.5 from
 .\" indent.texinfo.
 .\" 
 .\" INFO\-DIR\-SECTION Indent Code Formatter
@@ -25,7 +25,7 @@ indent - indent.info
 .\" * CIndent: (cindent).           C code formatter (fork).
 .\" END\-INFO\-DIR\-ENTRY
 .\" 
-.\" Copyright (C) 1999\-2018, 2020 Thomas E. Dickey
+.\" Copyright (C) 1999\-2020, 2022 Thomas E. Dickey
 .\" Copyright (C) 1995, 1996 Joseph Arceneaux
 .\" Copyright (C) 1989, 1992, 1993, 1994, 1995, 1996 Free Software
 .\" Foundation, Inc.
@@ -974,7 +974,7 @@ The
 copyright and copying permissions for this manual appear near the
 beginning of this document.
 .NS
-Copyright (C) 1999\-2019, 2020 Thomas E. Dickey
+Copyright (C) 1999\-2020, 2022 Thomas E. Dickey
 Copyright (C) 1995, 1996 Joseph Arceneaux
 Copyright (C) 1989, 1992, 1993, 1994, 1995, 1996 Free Software Foundation
 Copyright (C) 1985 Sun Microsystems, Inc.
@@ -994,7 +994,7 @@ or Sun Microsystems may not be used to endorse or promote products
 derived from this software without specific prior written permission.
 THIS SOFTWARE IS PROVIDED "AS IS" AND WITHOUT ANY EXPRESS OR
 IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
-WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
 PURPOSE.
 .NE
 .PP
