--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20221002) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 02 Oct 2022 13:13:09 -0400
+
 cindent (2.0.20210227) unstable; urgency=low
 
   * maintenance updates
