--- a/indent.1
+++ b/indent.1
@@ -947,9 +947,9 @@ output.
 .PP
 Other C statements within "rules" are not currently formatted.
 .SH Miscellaneous options
-To find out what version of \fBindent\fR you have, use the command 'indent
-\-\-version\fB.
-This will report the version number of \fRindent', without
+To find out what version of \fBindent\fR you have, use the command \fBindent
+\-\-version\fR.
+This will report the version number of \fBindent\fR, without
 doing any of the normal processing.
 .PP
 Use the \fB\-\-help\fR option to get a usage summary.
