--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20230205) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 05 Feb 2023 09:37:52 -0500
+
 cindent (2.0.20221016) unstable; urgency=low
 
   * maintenance updates
