--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20240514) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Tue, 14 May 2024 04:20:49 -0400
+
 cindent (2.0.20230205) unstable; urgency=low
 
   * maintenance updates
