--- a/indent.1
+++ b/indent.1
@@ -1,5 +1,5 @@
 '\" t
-.TH INDENT 1 2024-05-14 "" "User Commands"
+.TH INDENT 1 2025-05-04 "" "User Commands"
 .ie n .ds CW R
 .el   \{
 .ie \n(.g .ds CW CR
@@ -30,7 +30,7 @@ indent.info
 .\" * CIndent: (cindent).           C code formatter (fork).
 .\" END\-INFO\-DIR\-ENTRY
 .\"
-.\" Copyright (C) 1999\-2022, 2024 Thomas E. Dickey
+.\" Copyright (C) 1999\-2024, 2025 Thomas E. Dickey
 .\" Copyright (C) 1995, 1996 Joseph Arceneaux
 .\" Copyright (C) 1989, 1992, 1993, 1994, 1995, 1996 Free Software
 .\" Foundation, Inc.
@@ -59,7 +59,7 @@ It can
 also convert from one style of writing C to another.
 .PP
 \fBindent\fR understands a substantial amount about the syntax of C, but
-it also attempts to cope with incomplete and misformed syntax.
+it also attempts to cope with incomplete and malformed syntax.
 .PP
 In version 1.2 and more recent versions, the GNU style of indenting
 is the default.
@@ -954,8 +954,8 @@ Use the \fB\-\-help\fR option to get a usage summary.
 .PP
 The \fB\-v\fR option can be used to turn on verbose mode.
 When in verbose
-mode, \fBindent\fR reports when it splits one line of input into two more
-more lines of output, and gives some size statistics at completion.
+mode, \fBindent\fR reports when it splits one line of input into two or more
+lines of output, and gives some size statistics at completion.
 .PP
 The \fB\-D\fR option can be used to turn on debugging traces.
 Its
@@ -972,7 +972,7 @@ The
 copyright and copying permissions for this manual appear near the
 beginning of this document.
 .NS
-Copyright (C) 1999\-2022, 2024 Thomas E. Dickey
+Copyright (C) 1999\-2024, 2025 Thomas E. Dickey
 Copyright (C) 1995, 1996 Joseph Arceneaux
 Copyright (C) 1989, 1992, 1993, 1994, 1995, 1996 Free Software Foundation
 Copyright (C) 1985 Sun Microsystems, Inc.
