--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20250504) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 04 May 2025 14:10:55 -0400
+
 cindent (2.0.20240514) unstable; urgency=low
 
   * maintenance updates
